--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-  <img src="social-links-profile-main/assets/images/avatar-jessica.png" alt="Profile Image" class="profile-img"> 
+  <img src="./assets/images/avatar-jessica.jpeg" alt="Profile Image" class="profile-img"> 
   <h1>Jessica Randall</h1>
   <p><span style="color: white; font-family: Inter;"  >London, United Kingdom</span></p> 
   <p style="font-family: Inter ;">"Front-end developer and avid reader."</p>
